fix: align about-content

--- a/shelter/pages/main/styles/_main.scss
+++ b/shelter/pages/main/styles/_main.scss
@@ -138,6 +138,7 @@
                 height: 64px;
                 text-align: center;
                 padding-top: 0;
+                margin-top: -2px;
             }
         }
         p {
