--- a/shelter/pages/main/styles/main.css
+++ b/shelter/pages/main/styles/main.css
@@ -720,6 +720,7 @@ button {
     height: 64px;
     text-align: center;
     padding-top: 0;
+    margin-top: -2px;
   }
 }
 
